manifests/0000_10_config-operator_00_networkpolicy_config-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: config-operator-networkpolicy
  namespace: openshift-config-operator
spec:
  podSelector:
    matchLabels:
      app: openshift-config-operator
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # allow metrics scraping from anywhere
  - ports:
    - protocol: TCP
      port: 8443
  egress:
  # allow egress to DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353
  # allow all egress traffic
  # required for egress to kube-apiserver pods
  - {}
